--- a/land/templates/register_view.html
+++ b/land/templates/register_view.html
@@ -3,6 +3,12 @@
     <div class="grid-row">
       <div class="column-two-thirds">
       <h1>{{ land_title['land-title'] }}</h1>
+
+      <dl>
+        <dt>Address</dt>
+        <dd><a href="http://address.openregister.org/address/{{ land_title['address']}}">ADDRESS!</a></dd>
+      </dl>
+
       </div>
     </div>
 {% endblock %}
