--- a/land/templates/govuk_template.html
+++ b/land/templates/govuk_template.html
@@ -56,6 +56,7 @@
 
     <!-- gov uk elements stylesheet -->
     <link rel="stylesheet" type="text/css" href="{{asset_path}}stylesheets/main.css">
+    <link rel="stylesheet" type="text/css" href="{{asset_path}}stylesheets/land.css">
 
     {% block head %}{% endblock %}
   </head>
