Added boilerplate text

--- a/land/templates/register_view.html
+++ b/land/templates/register_view.html
@@ -16,6 +16,25 @@
       </ul>
       </div>
 
+      <div class="column-two-thirds">
+      <h2 class='heading-large'>About this land title</h2>
+      <p>
+      The following extract contains information taken from registers associated with the title
+      number <code>{{ land_title['land-title']}}</code>. 
+      </p>
+      <p>
+      Neither this extract nor the full copy is an 'Official Copy' of the register. An
+      official copy of the register is admissible in evidence in a court to the same extent
+      as the original. A person is entitled to be indemnified by the registrar if he or she
+      suffers loss by reason of a mistake in an official copy.
+      </p>
+      <p>
+      This extract shows information current on <code>23 OCT 2015 at 12:14:45</code> and so does not take
+      account of any application made after that time even if pending in the Land Registry
+      when this extract was issued.
+      </p>
+      </div>
+
       {% for section_id in section_order %}
       {% set section = sections[section_id] %}
       <div class="column-two-thirds section">
