--- a/land/static/stylesheets/land.css
+++ b/land/static/stylesheets/land.css
@@ -1,5 +1,12 @@
 .clause-text {
   font-family: "Courier New";
+  white-space: pre-wrap;
+  background-color: #fff;
+  border: 0;
+  font-size: 0.75em;
+  display: inline;
+  padding: 0;
+  margin: 0;
 }
 
 .pilcrow,
